# mcp-docassemble

./: .env.example  .gitignore  3_NOT_SUPPORTED_ANALYSIS.md  API_KEY_BACKUP.md  CHANGELOG_v1.1.0_Enhanced.md  DOCKER_ANALYSIS.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  FAILING_ENDPOINTS_ANALYSIS.md  FINAL_TEST_REPORT_v1.1.0_Enhanced.md  FINAL_TEST_SUMMARY.md  FINAL_VERSION_ANALYSIS.md  LICENSE  LIVE_SERVER_ANALYSIS.md  Makefile  NEXT_STEPS.md  OFFICIAL_API_ENDPOINTS.md  README.md  README_FULL.md  README_OLD.md  REMAINING_FAILED_ENDPOINTS.md  SETUP.md  SYSTEMATIC_API_TEST.md  TEST_REPORT.md  TEST_SUMMARY_v1.1.0.md  UPDATED_TEST_SUMMARY_v1.1.0.md  UPDATE_v1.1.1.md  UPGRADE_GUIDE.md  alternative_admin_access.py  analyze_container_logs.py  analyze_failing_endpoints.py  analyze_installation.py  api_key_search.py  check_da_version.py  corrected_server_commands.sh  detailed_server_analysis.py  docker-compose.yml  docker_restart_guide.py  extended_version_check.py  (+31 more)
.github/workflows/: ci-cd.yml  ci-cd.yml.bak  docker-hardened-build.yml
scripts/: run_live_endpoint_checks.py  summarize_live_results.py
src/mcp_docassemble/: __init__.py  cli.py  client.py  enhancements.py  main.py  server.py
tests/: conftest.py  test_base.py  test_data_and_keys.py  test_interview_management.py  test_optimizations.py  test_playground_management.py  test_sanity.py  test_server_management.py  test_user_management.py
